# AdventOfCode2025

./: .gitignore  CMakeLists.txt  makeDay.sh  template.cpp
day1/: day1.cpp
day11/: day11.cpp
day2/: day2.cpp
day3/: day3.cpp
day4/: day4.cpp
day5/: day5.cpp  intervalTree-private.hpp  intervalTree.hpp
day6/: day6.cpp
day7/: day7.cpp  matrix-private.hpp  matrix.hpp
day8/: day8.cpp  kdtree-private.hpp  kdtree.hpp
day9/: day9.cpp
inc/: aoc.hpp
lib/: lib.cpp
